--- a/force-app/main/default/classes/TravelSupportHelper.cls
+++ b/force-app/main/default/classes/TravelSupportHelper.cls
@@ -20,7 +20,7 @@ public without sharing class TravelSupportHelper {
                 'Site__r.BillingCountry, ' +
                 'Site__r.BillingCountryCode, ' +
                 'Study_Site_Number__c, ' +
-                '(SELECT Id, isEnable__c, TravelVendor__r.Name, TravelVendor__r.Default_Country__c, TravelVendor__r.Link_Vendor__c FROM TravelVendorSettings__r' + (String.isBlank(clauseChild) ? '' : clauseChild) + ') ' +
+                '(SELECT Id, isEnable__c, Is_Manual__c, TravelVendor__r.Name, TravelVendor__r.Default_Country__c, TravelVendor__r.Link_Vendor__c, Study_Site__c FROM TravelVendorSettings__r' + (String.isBlank(clauseChild) ? '' : clauseChild) + ') ' +
                 'FROM Study_Site__c ';
         String clause = ' WHERE Clinical_Trial_Profile__c = \'' + ctpId + '\' ';
         if (isCountryCodes) {
