--- a/force-app/main/default/classes/CommunityFacadeRemote.cls
+++ b/force-app/main/default/classes/CommunityFacadeRemote.cls
@@ -31,6 +31,7 @@ public without sharing class CommunityFacadeRemote {
         Boolean isTCAccepted;
         String language;
         List<String> preventedCookies;
+        Boolean isNewSession;
     }
 
     @AuraEnabled
@@ -65,6 +66,7 @@ public without sharing class CommunityFacadeRemote {
             cd.language = UserInfo.getLanguage();
             cd.preventedCookies = getPreventedCookies(userContact.Id);
             cd.isDelegate = userContact.UserCommunityIsDelegate__c;
+            cd.isNewSession = CommunityService.isNewSession();
 
             return JSON.serialize(cd);
         } catch (Exception e) {
