PI My Studies Filters.

--- a/force-app/main/default/classes/CommunityFacadeRemote.cls
+++ b/force-app/main/default/classes/CommunityFacadeRemote.cls
@@ -58,14 +58,16 @@ public without sharing class CommunityFacadeRemote {
             }
             for(RP_Delegate_Relationship__c delegate : DelegateService.getHCPDelegates()){
                 availableModes.add(CommunityService.USER_MODE_HCP + ';' + delegate.Referring_Provider__c);
-                String RPFullName = delegate.Referring_Provider__r.Salutation + ' ' + delegate.Referring_Provider__r.Full_Name__c; //+ ' ' + delegate.Referring_Provider__r.Suffix;
+                String RPFullName = (delegate.Referring_Provider__r.Salutation != null?delegate.Referring_Provider__r.Salutation:'') +
+                        ' ' + delegate.Referring_Provider__r.Full_Name__c +
+                        ' ' + (delegate.Referring_Provider__r.Suffix!=null?delegate.Referring_Provider__r.Suffix:'');
                 cd.communityTypes.add( new CommunityType(CommunityService.USER_MODE_HCP,Label.CTL_L_HCP_DELEGATE_MODE.replaceAll('##RPName',RPFullName),delegate.Referring_Provider__c));
             }
             if(StudySiteService.getStudySitesForPI().size() > 0){
                 availableModes.add(CommunityService.USER_MODE_PI);
                 cd.communityTypes.add( new CommunityType(CommunityService.USER_MODE_PI,Label.CTL_L_PI_MODE,''));
             }
-            if(userContact.userCommunytyType__c.contains(CommunityService.USER_MODE_PARTICIPANT)) {
+            if(userContact.userCommunytyType__c != null && userContact.userCommunytyType__c.contains(CommunityService.USER_MODE_PARTICIPANT)) {
                 availableModes.add(CommunityService.USER_MODE_PARTICIPANT);
                 cd.communityTypes.add( new CommunityType(CommunityService.USER_MODE_PARTICIPANT, Label.CTL_L_Patricipant_MODE, ''));
             }
